
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


typedef TYPE_1__* gdImagePtr ;
struct TYPE_5__ {int thick; } ;


 int _gdImageFilledHRectangle (TYPE_1__*,int,int,int,int,int) ;
 int gdImageSetPixel (TYPE_1__*,int,int,int) ;

__attribute__((used)) static void gdImageHLine(gdImagePtr im, int y, int x1, int x2, int col)
{
 if (im->thick > 1) {
  int thickhalf = im->thick >> 1;
  _gdImageFilledHRectangle(im, x1, y - thickhalf, x2, y + im->thick - thickhalf - 1, col);
 } else {
  if (x2 < x1) {
   int t = x2;
   x2 = x1;
   x1 = t;
  }

  for (;x1 <= x2; x1++) {
   gdImageSetPixel(im, x1, y, col);
  }
 }
 return;
}
